--- a/app/src/main/res/navigation/navigation_graph_tab_home.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_home.xml
@@ -60,18 +60,11 @@
                 android:id="@+id/action_signup_to_preferenceCategory"
                 app:destination="@id/preferenceCategory" />
         </fragment>
-        <action
-            android:id="@+id/action_navigation_self"
-            app:destination="@id/navigation" />
     </navigation>
     <fragment
         android:id="@+id/home"
         android:name="com.timenoteco.timenote.view.homeFlow.Home"
-        android:label="Home" >
-        <action
-            android:id="@+id/action_home_to_navigation"
-            app:destination="@id/navigation" />
-    </fragment>
+        android:label="Home" />
     <fragment
         android:id="@+id/detailedTimenote"
         android:name="com.timenoteco.timenote.view.homeFlow.DetailedTimenote"
@@ -82,24 +75,6 @@
         <argument
             android:name="event"
             app:argType="com.timenoteco.timenote.model.TimenoteInfoDTO"
-            app:nullable="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/profile"
-        android:name="com.timenoteco.timenote.view.profileFlow.Profile"
-        android:label="Profile" >
-        <argument
-            android:name="isNotMine"
-            app:argType="boolean"/>
-        <action
-            android:id="@+id/action_profile_to_profileCalendar"
-            app:destination="@id/profileCalendar" />
-        <argument
-            android:name="from"
-            app:argType="integer" />
-        <argument
-            android:name="userInfoDTO"
-            app:argType="com.timenoteco.timenote.model.UserInfoDTO"
             app:nullable="true" />
     </fragment>
     <fragment
@@ -126,7 +101,8 @@
             app:destination="@id/previewTimenoteCreated" />
         <argument
             android:name="modify"
-            app:argType="integer" />
+            app:argType="integer"
+            android:defaultValue="1" />
         <argument
             android:name="id"
             app:argType="string"
@@ -137,7 +113,8 @@
             app:nullable="true" />
         <argument
             android:name="from"
-            app:argType="integer"/>
+            app:argType="integer"
+            android:defaultValue="1" />
     </fragment>
     <fragment
         android:id="@+id/previewTimenoteCreated"
@@ -151,6 +128,9 @@
             android:name="timenoteInfoDTO"
             app:argType="com.timenoteco.timenote.model.TimenoteInfoDTO"
             app:nullable="true" />
+        <argument
+            android:name="modify"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/followPage"
@@ -167,14 +147,8 @@
         <argument
             android:name="isNotMine"
             app:argType="boolean" />
-    </fragment>
-    <fragment
-        android:id="@+id/profileCalendar"
-        android:name="com.timenoteco.timenote.view.profileFlow.ProfileCalendar"
-        android:label="ProfileCalendar" >
-        <argument
-            android:name="id"
-            app:argType="string" />
+        <argument android:name="from"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/profilModify"
@@ -206,10 +180,33 @@
             app:nullable="true" />
     </fragment>
     <action android:id="@+id/action_global_detailedTimenote" app:destination="@id/detailedTimenote" />
-    <action android:id="@+id/action_global_profile" app:destination="@id/profile" />
     <action android:id="@+id/action_global_createTimenote" app:destination="@id/createTimenote" />
     <action android:id="@+id/action_global_timenoteTAG" app:destination="@id/timenoteTAG" />
     <action android:id="@+id/action_global_timenoteAddress" app:destination="@id/timenoteAddress" />
     <action android:id="@+id/action_global_followPage" app:destination="@id/followPage" />
     <action android:id="@+id/action_global_profilModify" app:destination="@id/profilModify" />
+    <fragment
+        android:id="@+id/profileElse"
+        android:name="com.timenoteco.timenote.view.profileFlow.ProfileElse"
+        android:label="ProfileElse" >
+        <argument
+            android:name="userInfoDTO"
+            app:argType="com.timenoteco.timenote.model.UserInfoDTO"
+            app:nullable="true"
+            android:defaultValue="@null" />
+        <argument
+            android:name="from"
+            app:argType="integer" />
+    </fragment>
+    <action android:id="@+id/action_global_profileElse" app:destination="@id/profileElse" />
+    <fragment
+        android:id="@+id/profileCalendar"
+        android:name="com.timenoteco.timenote.view.profileFlow.ProfileCalendar"
+        android:label="ProfileCalendar" >
+        <argument
+            android:name="id"
+            app:argType="string" />
+    </fragment>
+    <action android:id="@+id/action_global_profileCalendar" app:destination="@id/profileCalendar" />
+    <action android:id="@+id/action_global_navigation" app:destination="@id/navigation" />
 </navigation>
