--- a/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
@@ -68,9 +68,6 @@
         <action
             android:id="@+id/action_nearBy_to_nearbyFilters"
             app:destination="@id/nearbyFilters" />
-        <action
-            android:id="@+id/action_nearBy_to_navigation"
-            app:destination="@id/navigation" />
     </fragment>
     <fragment
         android:id="@+id/nearbyFilters"
@@ -92,24 +89,6 @@
         <argument
             android:name="event"
             app:argType="com.timenoteco.timenote.model.TimenoteInfoDTO"
-            app:nullable="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/profile"
-        android:name="com.timenoteco.timenote.view.profileFlow.Profile"
-        android:label="Profile" >
-        <argument
-            android:name="isNotMine"
-            app:argType="boolean" />
-        <action
-            android:id="@+id/action_profile_to_profileCalendar"
-            app:destination="@id/profileCalendar" />
-        <argument
-            android:name="from"
-            app:argType="integer" />
-        <argument
-            android:name="userInfoDTO"
-            app:argType="com.timenoteco.timenote.model.UserInfoDTO"
             app:nullable="true" />
     </fragment>
     <fragment
@@ -135,7 +114,8 @@
             app:destination="@id/previewTimenoteCreated" />
         <argument
             android:name="modify"
-            app:argType="integer" />
+            app:argType="integer"
+            android:defaultValue="1" />
         <argument
             android:name="id"
             app:argType="string"
@@ -146,7 +126,8 @@
             app:nullable="true"/>
         <argument
             android:name="from"
-            app:argType="integer"/>
+            app:argType="integer"
+            android:defaultValue="3" />
     </fragment>
     <fragment
         android:id="@+id/previewTimenoteCreated"
@@ -160,14 +141,9 @@
             android:name="timenoteInfoDTO"
             app:argType="com.timenoteco.timenote.model.TimenoteInfoDTO"
             app:nullable="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/profileCalendar"
-        android:name="com.timenoteco.timenote.view.profileFlow.ProfileCalendar"
-        android:label="ProfileCalendar" >
         <argument
-            android:name="id"
-            app:argType="string" />
+            android:name="modify"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/followPage"
@@ -184,6 +160,9 @@
         <argument
             android:name="isNotMine"
             app:argType="boolean" />
+        <argument
+            android:name="from"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/profilModify"
@@ -215,9 +194,32 @@
     </fragment>
     <action android:id="@+id/action_global_detailedTimenote" app:destination="@id/detailedTimenote" />
     <action android:id="@+id/action_global_createTimenote" app:destination="@id/createTimenote" />
-    <action android:id="@+id/action_global_profile" app:destination="@id/profile" />
     <action android:id="@+id/action_global_timenoteAddress" app:destination="@id/timenoteAddress" />
     <action android:id="@+id/action_global_timenoteTAG" app:destination="@id/timenoteTAG" />
     <action android:id="@+id/action_global_followPage" app:destination="@id/followPage" />
     <action android:id="@+id/action_global_profilModify" app:destination="@id/profilModify" />
+    <fragment
+        android:id="@+id/profileElse"
+        android:name="com.timenoteco.timenote.view.profileFlow.ProfileElse"
+        android:label="ProfileElse" >
+        <argument
+            android:name="userInfoDTO"
+            app:argType="com.timenoteco.timenote.model.UserInfoDTO"
+            app:nullable="true"
+            android:defaultValue="@null" />
+        <argument
+            android:name="from"
+            app:argType="integer" />
+    </fragment>
+    <action android:id="@+id/action_global_profileElse" app:destination="@id/profileElse" />
+    <fragment
+        android:id="@+id/profileCalendar"
+        android:name="com.timenoteco.timenote.view.profileFlow.ProfileCalendar"
+        android:label="ProfileCalendar" >
+        <argument
+            android:name="id"
+            app:argType="string" />
+    </fragment>
+    <action android:id="@+id/action_global_profileCalendar" app:destination="@id/profileCalendar" />
+    <action android:id="@+id/action_global_navigation" app:destination="@id/navigation" />
 </navigation>
