--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,10 @@
 
     <dimen name="corner_radius_rounded">25dp</dimen>
     <dimen name="corner_radius_default">2dp</dimen>
+
+    <dimen name="grid_spacing">8dp</dimen>
+    <dimen name="carousel_spacing">16dp</dimen>
+    <dimen name="prominent_threshold">72dp</dimen>
+    <dimen name="rounded_corners_radius">8dp</dimen>
+    <dimen name="gradient_width">56dp</dimen>
 </resources>
