--- a/app/src/main/res/layout-sw300dp/item_timenote_root.xml
+++ b/app/src/main/res/layout-sw300dp/item_timenote_root.xml
@@ -132,7 +132,8 @@
         android:shadowDy="1"
         android:shadowRadius="1.5"
         android:textColor="@android:color/white"
-        tools:text="In 2 days and 23 hours"
+        android:drawablePadding="4dp"
+        android:drawableStart="@drawable/ic_oval"
         app:layout_constraintEnd_toEndOf="@id/timenote_vp"
         app:layout_constraintStart_toStartOf="@id/timenote_vp"
         app:layout_constraintBottom_toBottomOf="@id/separator_2"
