--- a/app/src/main/res/layout/fragment_nearby_filters.xml
+++ b/app/src/main/res/layout/fragment_nearby_filters.xml
@@ -61,6 +61,8 @@
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
                 android:text="@string/category"
+                android:drawableStart="@drawable/ic_categorie_ok"
+                android:drawableTint="@color/colorText"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
@@ -102,6 +104,7 @@
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:drawablePadding="8dp"
+                android:drawableStart="@drawable/ic_new_timenote_share_with"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
                 android:text="@string/from"
@@ -146,6 +149,8 @@
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:drawablePadding="8dp"
+                android:drawableStart="@drawable/ic_monetisation_ok"
+                android:drawableTint="@color/colorText"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
                 android:text="@string/paid_timenote"
@@ -192,6 +197,7 @@
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
+                android:drawableStart="@drawable/ic_distance"
                 android:text="@string/distance_km"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -246,6 +252,7 @@
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
+                android:drawableStart="@drawable/ic_new_timenote_when"
                 android:text="@string/when"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -288,6 +295,7 @@
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:drawablePadding="8dp"
+                android:drawableStart="@drawable/ic_profile_from"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
                 android:text="@string/where"
