--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,6 +14,7 @@
     <attr name="colorDivider" format="reference|color"/>
     <attr name="colorBackgroundSettings" format="reference|color"/>
     <attr name="colorElevated" format="reference|color"/>
+    <attr name="colorHashtag" format="reference|color"/>
 
     <declare-styleable name="ExpandIconView">
         <attr name="eiv_roundedCorners" format="boolean"/>
