--- a/app/src/main/res/layout-sw380dp/item_timenote_root.xml
+++ b/app/src/main/res/layout-sw380dp/item_timenote_root.xml
@@ -124,16 +124,19 @@
 
     <TextView
         android:layout_marginTop="16dp"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:id="@+id/timenote_in_label"
         android:fontFamily="sans-serif-light"
         android:textSize="16sp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
+        android:gravity="center"
         android:shadowRadius="1.5"
+        android:drawablePadding="4dp"
+        android:drawableStart="@drawable/ic_oval"
         android:textColor="@android:color/white"
-        tools:text="In 2 days and 23 hours"
+        tools:text="LIVE"
         app:layout_constraintEnd_toEndOf="@id/timenote_vp"
         app:layout_constraintStart_toStartOf="@id/timenote_vp"
         app:layout_constraintBottom_toBottomOf="@id/separator_2"
