--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="colorDivider">#60000000</color>
     <color name="colorBackgroundSettings">#10aaaaaa</color>
     <color name="colorElevated">#fff</color>
+    <color name="colorHashtag">#4A3E8F</color>
 
     //Material SearchBar Light Theme Colors
     <color name="searchBarIconColor">#3a3a3a</color>
