--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,7 @@
         <item name="colorDivider">@color/colorDivider</item>
         <item name="colorBackgroundSettings">@color/colorBackgroundSettings</item>
         <item name="colorElevated">@color/colorElevated</item>
+        <item name="colorHashtag">@color/colorHashtag</item>
     </style>
 
 
