--- a/app/src/main/res/drawable/ic_certification.xml
+++ b/app/src/main/res/drawable/ic_certification.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18.52dp"
-    android:height="17.64dp"
+    android:width="12.52dp"
+    android:height="11.64dp"
     android:viewportWidth="18.52"
     android:viewportHeight="17.64">
   <path
       android:pathData="M18.51,6.72a0.25,0.25 0,0 0,-0.21 -0.17l-6.09,-0.89L9.48,0.14A0.24,0.24 0,0 0,9.26 0,0.23 0.23,0 0,0 9,0.14L6.31,5.66l-6.1,0.89a0.25,0.25 0,0 0,-0.2 0.17A0.23,0.23 0,0 0,0.08 7l4.41,4.3 -1,6.07a0.26,0.26 0,0 0,0.09 0.25,0.3 0.3,0 0,0 0.15,0.05 0.27,0.27 0,0 0,0.12 0l5.45,-2.87 5.45,2.87a0.27,0.27 0,0 0,0.26 0,0.24 0.24,0 0,0 0.1,-0.25l-1,-6.07L18.44,7A0.23,0.23 0,0 0,18.51 6.72ZM11.78,8 L9.21,11.76a0.31,0.31 0,0 1,-0.25 0.13,0.34 0.34,0 0,1 -0.17,-0.05l-1.91,-1.3a0.3,0.3 0,0 1,-0.07 -0.42A0.29,0.29 0,0 1,7.22 10l1.66,1.13 2.41,-3.52a0.29,0.29 0,0 1,0.41 -0.08A0.3,0.3 0,0 1,11.78 8Z"
-      android:fillColor="#fdce00"/>
+      android:fillColor="@color/colorAccent"/>
 </vector>
