--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,11 +15,12 @@
         android:layout_height="match_parent"/>
 
     <TextView
-        android:fontFamily="sans-serif-light"
+        android:paddingHorizontal="24dp"
+        android:src="@drawable/dayzee"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="144dp"
         android:shadowRadius="1.0"
         android:shadowDx="1.0"
         android:shadowDy="1.0"
@@ -37,7 +38,7 @@
         android:shadowDy="1.0"
         android:shadowColor="@color/colorText"
         android:fontFamily="sans-serif-light"
-        android:text="Start Scrolling Forward"
+        android:text="Makes Your Life Easy"
         android:textSize="18sp"
         android:textColor="@color/colorBackground"
         app:layout_constraintTop_toBottomOf="@id/timenote_label"
@@ -54,9 +55,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         fancy:fb_textColor="@color/colorText"
-        android:paddingVertical="8dp"
-        android:paddingHorizontal="48dp"
-        android:layout_marginBottom="72dp"
+        android:paddingVertical="12dp"
+        android:paddingHorizontal="60dp"
+        android:layout_marginBottom="144dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
