--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,53 +6,85 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:elevation="0dp"
+        app:elevation="0dp"
         style="@style/AppTheme.Toolbar"
+        android:layout_height="wrap_content"
         android:background="@color/colorBackground">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:elevation="0dp"
+            app:elevation="0dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|snapMargins|enterAlwaysCollapsed">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <ImageView
+
                     android:layout_width="80dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:src="@drawable/dayzee"
                     android:text="@string/timeline"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/home_future_timeline"
                     app:layout_constraintStart_toEndOf="@id/home_past_timeline"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="@id/home_future_timeline"
+                    app:layout_constraintBottom_toBottomOf="@id/home_future_timeline" />
 
                 <ImageView
+                    android:padding="16dp"
                     android:id="@+id/home_future_timeline"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
                     android:src="@drawable/ic_futur_plein_grad"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
 
                 <ImageView
+                    android:padding="16dp"
                     android:id="@+id/home_past_timeline"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
                     android:src="@drawable/ic_passe_ok"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
 
                 <TextView
+                    android:id="@+id/div"
                     style="@style/AppTheme.Divider.Toolbar"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/home_future_timeline"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/div"
+                    android:id="@+id/home_posted_recently"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/posted_recently"
+                    android:textColor="@color/colorText"
+                    android:textSize="14sp"
+                    android:visibility="gone"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier="1.0"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/home_posted_recently"
+                    android:visibility="visible"
+                    android:id="@+id/home_recent_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorBackground"
+                    android:clipToPadding="false"
+                    android:paddingEnd="8dp"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -64,30 +96,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:fillViewport="true"
+        android:fillViewport="false"
         app:layout_anchorGravity="bottom"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/home_posted_recently"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="8dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/posted_recently"
-                    android:textColor="@color/colorText"
-                    android:textSize="14sp"
-                    android:visibility="gone"/>
 
                 <TextView
                     android:layout_gravity="center"
@@ -104,31 +121,16 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:visibility="visible"
-                    android:id="@+id/home_recent_rv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorBackground"
-                    android:clipToPadding="false"
-                    android:nestedScrollingEnabled="true"
-                    android:orientation="horizontal"
-                    android:paddingEnd="8dp"
-                    tools:listitem="@layout/item_timenote_recent"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:visibility="visible"
                     android:id="@+id/home_rv"
                     android:paddingBottom="8dp"
                     android:clipToPadding="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorBackground"
-                    android:nestedScrollingEnabled="true"
-                    android:orientation="vertical"
                     tools:listitem="@layout/item_timenote"/>
 
             </LinearLayout>
 
-        </androidx.core.widget.NestedScrollView>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
