--- a/app/src/main/res/layout/fragment_profile_future_events.xml
+++ b/app/src/main/res/layout/fragment_profile_future_events.xml
@@ -48,7 +48,7 @@
                     android:visibility="gone"/>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:nestedScrollingEnabled="false"
+                    android:nestedScrollingEnabled="true"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
                     android:layout_gravity="bottom"
                     android:id="@+id/profile_rv"
