--- a/app/src/main/res/layout/item_timenote_recent.xml
+++ b/app/src/main/res/layout/item_timenote_recent.xml
@@ -16,6 +16,7 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:src="@drawable/ex"
             android:id="@+id/timenote_recent_pic_imageview"
             android:layout_width="150dp"
             android:layout_height="150dp"
@@ -49,7 +50,7 @@
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             android:textSize="15sp"
-            tools:text="MARSEILLE - PARIS"
+            tools:text="nice  - nantes"
             android:maxLines="1"
             android:ellipsize="end"
             android:breakStrategy="simple"
@@ -85,7 +86,7 @@
             android:paddingHorizontal="8dp"
             android:maxLines="1"
             android:ellipsize="end"
-            tools:text="LIVE"
+            tools:text="In 3 days and 8 hours"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
